--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
@@ -71,6 +71,8 @@
 			mui.plusReady(function() {
 				//从专家页面传值
 				window.addEventListener('qiuzhi-expertAllAnswer', function(event) {
+					pageIndex = 1;
+					flagRef = 0;
 					//赋值
 					ExpertsInfo = event.detail.data;
 					console.log('专家回答页传值：' + JSON.stringify(ExpertsInfo));
@@ -89,7 +91,6 @@
 					down: {
 						callback: function() {
 							//清除节点
-
 							document.getElementById('list-container').innerHTML = "";
 							var self = this;
 							console.log("下拉刷新");
@@ -102,11 +103,10 @@
 					},
 					up: {
 						callback: function() {
-
 							var self = this;
 							console.log("上拉加载更多");
 							flagRef = 1;
-							if(pageIndex < totalPageCount) {
+							if(pageIndex <= totalPageCount) {
 								//24.获取某个用户的回答列表
 								getAnswersByUser(ExpertsInfo.UserId);
 							} else {
@@ -136,10 +136,12 @@
 					if(data.RspCode == 0) {
 						//总页数
 						totalPageCount = data.RspData.TotalPage;
+						pageIndex++;
 						if(flagRef == 0) { //刷新
+							//清除节点
+							document.getElementById('list-container').innerHTML = "";
 							answerArray = data.RspData.Data;
 						} else { //加载更多
-							pageIndex++;
 							//合并数组
 							answerArray = answerArray.concat(data.RspData.Data);
 						}
