--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
@@ -84,7 +84,7 @@
 							var self = this;
 							console.log("上拉加载更多");
 							flagRef = 1;
-							if(pageIndex < totalPageCount) {
+							if(pageIndex <= totalPageCount) {
 								//33.获取某个用户的评论列表
 								getCommentsByUser(ExpertsInfo.UserId);
 							} else {
@@ -118,7 +118,6 @@
 						if(flagRef == 0) { //刷新
 							answerArray = data.RspData.Data;
 						} else { //加载更多
-							pageIndex++;
 							//合并数组
 							answerArray = answerArray.concat(data.RspData.Data);
 						}
