--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -178,7 +178,7 @@
 					var self = this;
 					console.log("上拉加载更多");
 					flagRef = 1;
-					if(pageIndex < totalPageCount) {
+					if(pageIndex <= totalPageCount) {
 						getAsksByUser(ExpertsInfo.UserId);
 					} else {
 						mui.toast('没有更多了');
@@ -210,7 +210,6 @@
 				if(flagRef == 0) { //刷新
 					datasource = data.RspData.Data;
 				} else { //加载更多
-					
 					//合并数组
 					datasource = datasource.concat(data.RspData.Data);
 				}
