--- a/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet">
+		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/qiuzhi/attention-persons.css" rel="stylesheet" />
 	</head>
 
