留言板界面修改

--- a/JiaoBaoYun-hb/html/quan/zone_main.html
+++ b/JiaoBaoYun-hb/html/quan/zone_main.html
@@ -44,7 +44,7 @@
 			events.initSubPage('zonep_sub.html', {data:data,NoReadCnt:NoReadCnt});
 			//			var tempview =  plus.webview.getWebviewById('zonep_sub.html');
 			events.addTap('leave', function() {
-				events.openNewWindowWithData('../quan/leave.html', data);
+				events.openNewWindowWithData('../quan/leaveNew.html', data);
 			})
 			events.addTap('pub-dynamic', function() {
 				var pubDynamic = document.getElementById("pub-dynamic")
