--- a/JiaoBaoYun-hb/html/quan/leave-sub.html
+++ b/JiaoBaoYun-hb/html/quan/leave-sub.html
@@ -11,12 +11,95 @@
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<link rel="stylesheet" href="../../css/quan/about-me.css" />
 		<link rel="stylesheet" href="../../css/utils/bubble.css" />
+		<!--<link href="../../css/qiuzhi/qiuzhi-inviteAnswer.css" rel="stylesheet" />-->
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/mui.pullToRefresh.js"></script>
+		<script src="../../js/mui.pullToRefresh.material.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script src="../../js/utils/native.js"></script>
 
 		<style>
+			.mui-scroll-wrapper {
+				padding-top: 44px;
+			}
+			
+			.mui-bar~.mui-content .mui-fullscreen {
+				top: 44px;
+				height: auto;
+			}
+			
+			.mui-pull-top-tips {
+				position: absolute;
+				top: -20px;
+				left: 50%;
+				margin-left: -25px;
+				width: 40px;
+				height: 40px;
+				border-radius: 100%;
+				z-index: 1;
+			}
+			
+			.mui-bar~.mui-pull-top-tips {
+				top: 24px;
+			}
+			
+			.mui-pull-top-wrapper {
+				width: 42px;
+				height: 42px;
+				display: block;
+				text-align: center;
+				background-color: #efeff4;
+				border: 1px solid #ddd;
+				border-radius: 25px;
+				background-clip: padding-box;
+				box-shadow: 0 4px 10px #bbb;
+				overflow: hidden;
+			}
+			
+			.mui-pull-top-tips.mui-transitioning {
+				-webkit-transition-duration: 200ms;
+				transition-duration: 200ms;
+			}
+			
+			.mui-pull-top-tips .mui-pull-loading {
+				/*-webkit-backface-visibility: hidden;
+				-webkit-transition-duration: 400ms;
+				transition-duration: 400ms;*/
+				margin: 0;
+			}
+			
+			.mui-pull-top-wrapper .mui-icon,
+			.mui-pull-top-wrapper .mui-spinner {
+				margin-top: 7px;
+			}
+			
+			.mui-pull-top-wrapper .mui-icon.mui-reverse {
+				/*-webkit-transform: rotate(180deg) translateZ(0);*/
+			}
+			
+			.mui-pull-bottom-tips {
+				text-align: center;
+				background-color: #efeff4;
+				font-size: 15px;
+				line-height: 40px;
+				color: #777;
+			}
+			
+			.mui-pull-top-canvas {
+				overflow: hidden;
+				background-color: #fafafa;
+				border-radius: 40px;
+				box-shadow: 0 4px 10px #bbb;
+				width: 40px;
+				height: 40px;
+				margin: 0 auto;
+			}
+			
+			.mui-pull-top-canvas canvas {
+				width: 40px;
+			}
+			
 			.mui-table-view {
 				background: white;
 				/*背景色透明*/
@@ -98,42 +181,21 @@
 	</head>
 
 	<body>
-		<!--<footer id="footer" class="mui-bar-tab" style="display: block;">
-			<div class="footer-center">
-				<textarea onblur="inputOnblur(this)" onfocus="setStyle(this.id)" id='msg-content' type="text" class='input-text' placeholder=""></textarea>
-			</div>
-			<button id='btn-reply' class="mui-btn  btn-commit">发送</button>
-		</footer>-->
+
 		<!--下拉刷新容器-->
-		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
-			<div class="mui-scroll">
-				<div hidden="hidden" style="height: 120px;;background-image:url(../../image/quan/leave-bg.png) ;"><br/>
-					<h4 style="padding-left: 10px;margin-top: -10px;">主人寄语:</h4>
-					<textarea id='leaveTitle' readonly="readonly" onblur="inputOnblur(this)" class="mui-input-clear question" placeholder="" style="height: 80px;width: 80%;margin-left: 80px;margin-top: -5px;background-color: transparent;text-align: left;font-size: 15px;font-weight: 600;border-color:transparent ;"></textarea>
+		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0">
+			<div class="mui-scroll-wrapper">
+				<div class="mui-scroll">
 
-				</div>
-				<div hidden="hidden" id="leaveNum" style="background-color: gainsboro;height: 30px;padding: 5px;font-size: 15px;">
-				</div>
-				<!--数据列表-->
-				<ul id="leaveList" class="mui-table-view">
+					<!--数据列表-->
+					<ul id="list-container" class="mui-table-view">
 
-				</ul>
+					</ul>
+				</div>
 			</div>
-		</div>
 	</body>
 	<script>
-		mui.init({
-			pullRefresh: {
-				container: '#pullrefresh',
-				down: {
-					callback: pulldownRefresh
-				},
-				up: {
-					contentrefresh: '正在加载...',
-					callback: pullupRefresh
-				}
-			}
-		});
+		mui.init({});
 		var cellIndex;
 		var userId; //留言板拥有者id
 		var personalUTID; //当前登录账号utid
@@ -154,13 +216,6 @@
 				requestData(comData);
 			})
 			userId = plus.webview.currentWebview().data;
-			var leaveTitle = document.getElementById('leaveTitle');
-			if(userId == personalUTID) {
-				leaveTitle.removeAttribute("readOnly");
-
-			} else {
-				leaveTitle.readOnly = 'readonly'
-			}
 
 			var comData = {
 				userId: userId, //用户ID
@@ -169,90 +224,42 @@
 			};
 			//请求数据
 			requestData(comData);
+			mui(".mui-scroll-wrapper .mui-scroll").pullToRefresh({
+				down: {
+					callback: function() {
+
+						flag = 2;
+						var self = this;
+						if(tempPage * 10 > totalCnt || tempPage * 10 == totalCnt) {
+							mui.toast('没有更多了...');
+							self.endPullDownToRefresh();
+						} else {
+							tempPage++;
+							var comData = {
+								userId: userId, ////留言板拥有者id
+								pageIndex: (tempPage).toString(), //当前页数
+								pageSize: '10' //每页记录数
+							};
+							//请求数据
+							requestData(comData);
+							self.endPullDownToRefresh();
+						}
+
+					}
+				},
+				up: {
+					callback: function() {
+						var self = this;
+						console.log("上拉加载更多");
+	
+						self.endPullUpToRefresh();
+					}
+				}
+			});
 
 		})
-		document.getElementById('leaveTitle').addEventListener('input', function() { //监听textarea值得变化
-				console.log(this.value)
-					//			jQuery(this).prop("maxLength","30");
-				if(this.value.length > 50) {
-					mui.toast('不能超过50字')
-					this.value = this.value.substr(0, 50)
-				}
-			})
-			//				//失去焦点事件
-			//		function inputOnblur(input) {
-			//			
-			//			//			mui('.mui-popover').popover('hide');
-			//
-			//		}
-		function setStyle(x) {
-			
-			var replyContainer = document.getElementById('footer');
-			document.getElementById('footer').className = 'mui-bar-tab';
-			replyContainer.style.display = 'block';
-			showSoftInput('#msg-content');
-		}
 
-		function inputOnblur(input) { //失去焦点事件
-			if(input.id == 'msg-content') {
-				var inputComment = document.getElementById("msg-content");
-				inputComment.value = '';
-				inputComment.placeholder = '';
-			} else {
-				if(input.value == '' || input.value == null) {
-					mui.toast('主人寄语不能为空');
-				} else if(input.value.length > 50) {
-					mui.toast('不能超过50字');
-					input.scrollTop = 0
-
-				} else if(input.value != note) {
-					modifyMaster(input.value);
-					input.scrollTop = 0
-				}
-			}
-
-		}
-		/**
-		 * 下拉刷新具体业务实现
-		 */
-		function pulldownRefresh() {
-			setTimeout(function() {
-				//刷新时将页码归1
-				totalCnt = 0;
-				flag = 1;
-				var comData = {
-					userId: userId, ////留言板拥有者id
-					pageIndex: (1).toString(), //当前页数
-					pageSize: '10' //每页记录数
-				};
-				//请求数据
-				requestData(comData);
-				//				mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
-			}, 1500);
-
-		}
-		var count = 0;
-		/**
-		 * 上拉加载具体业务实现
-		 */
-		function pullupRefresh() {
-			flag = 2;
-
-			if(tempPage * 10 > totalCnt || tempPage * 10 == totalCnt) {
-				mui.toast('没有更多了...');
-				mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
-			} else {
-				tempPage++;
-				var comData = {
-					userId: userId, ////留言板拥有者id
-					pageIndex: (tempPage).toString(), //当前页数
-					pageSize: '10' //每页记录数
-				};
-				//请求数据
-				requestData(comData);
-			}
-
-		}
+		
 
 		//页码，请求第几页数据
 		var tempPage = 1;
@@ -358,21 +365,7 @@
 						}
 						//留言总条数
 						totalCnt = data.RspData.TotalCnt;
-						var leaveNum = document.getElementById("leaveNum");
-						leaveNum.innerHTML = '留言(' + data.RspData.TotalCnt + ')';
-						//主人寄语
-						var leaveTitle = document.getElementById('leaveTitle');
-						if(data.RspData.Note == '' || data.RspData.Note == null) {
-							if(userId == personalUTID) {
-								leaveTitle.placeholder = '请填写主人寄语';
-							} else {
-								leaveTitle.value = ''
-							}
 
-						} else {
-							leaveTitle.value = data.RspData.Note;
-						}
-						note = data.RspData.Note;
 						refreshUI();
 					});
 
@@ -382,30 +375,8 @@
 			});
 		}
 
-		//修改主人寄语
-		function modifyMaster(note) {
-			//需要加密的数据
-			var tempData = {
-					userId: personalUTID, //用户ID
-					note: note //备注，即主人寄语
-				}
-				// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-			//60.（用户空间）修改留言板备注
-			postDataPro_setMsgNoteByUser(tempData, wd, function(data) {
-				wd.close();
-				console.log('60.postDataPro_setMsgNoteByUsersuccess:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-				if(data.RspCode == 0) {
-					mui.toast('修改成功')
-
-				} else {
-					mui.toast(data.RspTxt);
-				}
-			});
-		};
-
 		function refreshUI() {
-			var ul = document.getElementById('leaveList');
+			var ul = document.getElementById('list-container');
 			var len;
 			if(flag == 1) {
 				ul.innerHTML = '';
@@ -439,10 +410,10 @@
 							'<img class=" dynamic-personal-image" src="' + commentArr[j].uimg + '">' +
 							'</div>' +
 							'<div class="mui-media-body dynamic-padding-left-10px">' +
-							'<h6>' +events.shortForString(commentArr[j].unick, 12)  + '</h6>' +
+							'<h6>' + events.shortForString(commentArr[j].unick, 12) + '</h6>' +
 							'</div></div>' +
 							'<div style= "margin-top:-10px"  class = "chat_content_left">' + '<span style = "color:rgb(43,176,238);font-size:14px;" class="mui-ellipsis">' +
-							'@' +events.shortForString(commentArr[j].ReplyIdName, 12)  + '</span> ' +
+							'@' + events.shortForString(commentArr[j].ReplyIdName, 12) + '</span> ' +
 							commentArr[j].MsgContent +
 							'<p style = "text-align: right;">' + commentArr[j].MsgDate + '</p></div>'
 					} else {
@@ -451,97 +422,34 @@
 							'<img class=" dynamic-personal-image" src="' + commentArr[j].uimg + '">' +
 							'</div>' +
 							'<div class="mui-media-body" style = "text-align: right;padding-right:10px">' +
-							'<h6>' +events.shortForString(commentArr[j].unick, 12)  + '</h6>' +
+							'<h6>' + events.shortForString(commentArr[j].unick, 12) + '</h6>' +
 							'</div></div>' +
 							'<div style= "margin-top:-5px; "  class = "chat_content_right">' + '<div class="chat-body ">' +
 							'<div >' + '<span style = "font-size:14px;">' + '<span style = "color:rgb(43,176,238);">' +
-							'@' +events.shortForString(commentArr[j].ReplyIdName, 12)  + '</span>' + '<span>' + " " +
+							'@' + events.shortForString(commentArr[j].ReplyIdName, 12) + '</span>' + '<span>' + " " +
 							commentArr[j].MsgContent + '</span> ' + '</span> </div></div>' + '<p>' + commentArr[j].MsgDate + '</p></div>';
 					}
 
 					ul.appendChild(li);
-					//					'</font></div>';
 				}
-			}
-			if(flag == 1) {
-				mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
-			} else {
-				mui('#pullrefresh').pullRefresh().endPullupToRefresh();
 			}
 
 			//点击回复
 			mui('.mui-table-view').on('tap', '.ableSelectedCell', function() {
 				var replyContainer = document.getElementById('footer');
-//				var leaveContent = document.getElementById('msg-content');
-//				showSoftInput('#msg-content');
+
 				cellIndex = this.id.replace('reply', '');
 				var data = {
 					userId: personalUTID,
 					upperId: leaveArray[cellIndex].TabId,
 					replyUserId: leaveArray[cellIndex].UserId,
 					userOwnerId: userId,
-//					placehold:'@' + leaveArray[cellIndex].unick,
 				}
-				events.openNewWindowWithData('leave-reply.html',data)
-//				leaveContent.placeholder = '@' + leaveArray[cellIndex].unick;
+				events.openNewWindowWithData('leave-reply.html', data)
 				console.log(cellIndex);
 
 			});
 		}
-
-		events.addTap('btn-reply', function() {
-			console.log('点击发送');
-			var leaveContent = document.getElementById('msg-content');
-			var tempText = leaveContent.value;
-			if(!tempText || tempText == '') {
-				mui.toast('请输入留言');
-				return;
-			} else {
-				tempText = replaceAllBL(tempText);
-			}
-			var data = {};
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-
-			if(leaveContent.placeholder == '') {
-				data = {
-					userId: personalUTID,
-					userOwnerId: userId,
-					msgContent: tempText
-				}
-				postDataPro_addUserSpaceMsg(data, wd, function(data) {
-					wd.close();
-					console.log('addUserSpaceMsg:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + data.RspData.TotalCnt);
-					if(data.RspCode == 0) {
-						mui.toast('成功')
-						leaveContent.value = '';
-						events.fireToPageNone('leave-sub.html', 'refreshLeaveList');
-					} else {
-						mui.toast(data.RspTxt);
-					}
-				})
-			} else {
-				data = {
-					userId: personalUTID,
-					upperId: leaveArray[cellIndex].TabId,
-					replyUserId: leaveArray[cellIndex].UserId,
-					userOwnerId: userId,
-					msgContent: tempText
-				}
-				postDataPro_addUserSpaceMsgReply(data, wd, function(data) {
-					wd.close();
-					console.log('postDataPro_addUserSpaceMsgReply:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + data.RspData.TotalCnt);
-					if(data.RspCode == 0) {
-						mui.toast('成功')
-						leaveContent.value = '';
-						leaveContent.placeholder = '';
-						events.fireToPageNone('leave-sub.html', 'refreshLeaveList');
-					} else {
-						mui.toast(data.RspTxt);
-					}
-				})
-			}
-
-		})
 	</script>
 
 </html>
