--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-inviteAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-inviteAnswer.html
@@ -16,20 +16,20 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">邀请他回答</h1>
 		</header>
-		<!--<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0">
+		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0">
 			<div class="mui-scroll-wrapper">
 				<div class="mui-scroll">
 					<ul id="list-container" class="mui-table-view">
-						<li class="mui-table-view-cell">
+						<!--<li class="mui-table-view-cell">
 							<img src="../../image/cloud.png" />
 							<div>
 								<p><span>111</span>邀请<span>2222222222222222222222222222222222222222222222222222222222222222222222</span>回答问题</p>
 								<p class="Ask-Title">[33333]444444445555555555555555555555555555555555555555555555555555555555555555555555555555555555555555按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多按时打算打算打算多5555555554</p>
 							</div>
-						</li>
+						</li>-->
 					</ul>
 				</div>
-			</div>-->
+			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/mui.pullToRefresh.js"></script>
