--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -19,11 +19,18 @@
 				</div>
 				<div id="experts_sw" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<div id="experts_sc" class="mui-scroll">
-						<!--<a id="allExpert" class="mui-control-item" style="width: 8rem;padding: 1rem 0px;">
-							<span class="mui-icon iconfont icon-gengduo" style="color: #12B7F5;font-size: 28px;margin: 0px;"></span>
-							<p style="color: #12B7F5;">查看全部</p>
+						<!--<a class="mui-control-item">
+							<img src="http://oigr7qsvz.bkt.clouddn.com/headimge1.png?1488254100675" />
+							<p class="mui-ellipsis" style="color:#323232;">一二三四</p>
+						</a>
+						<a class="mui-control-item">
+							<img src="http://oigr7qsvz.bkt.clouddn.com/headimge1.png?1488254100675" />
+							<p class="mui-ellipsis" style="color:#323232;">一二</p>
+						</a>
+						<a id="allExpert" class="mui-control-item">
+							<img src="../../image/qiuzhi/expert_more.png" />
+							<p>查看全部</p>
 						</a>-->
-
 					</div>
 				</div>
 			</div>
