求知回答问题 图片上传 裁剪

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -34,6 +34,7 @@
 					</div>
 				</div>
 			</div>
+			<!--<p><img id="img" border "0" src="http://qn-cspb.jiaobaowang.net/qiuzhi/Knowledge/14885338265901488533813957.jpg" style="clip:rect(10px 10px 20px 0px)"/></p>-->
 			<!--<div class="mui-table-view-divider"></div>-->
 			<div class="mui-scroll">
 				<ul id="list-container" class="mui-table-view">
