--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -136,7 +136,7 @@
 			events.preload('qiuzhi-expertAllAnswer.html', 10);
 			events.preload('qiuzhi-expertAllComment.html', 10);
 			events.preload('focus-question.html', 10);
-			events.preload('heAttentionPersons.html', 10);
+//			events.preload('heAttentionPersons.html', 10);
 			var main = plus.webview.currentWebview(); //获取当前窗体对象
 			ExpertsInfo = main.data; //接收页面传入参数值，传过来的专家model
 			console.log('expert-detail.html:' + JSON.stringify(ExpertsInfo));
@@ -193,13 +193,14 @@
 			})
 			events.addTap('FocusMan', function() {
 				console.log('他关注的人');
-				events.fireToPage('heAttentionPersons.html', 'heAttentionPersons', function() {
-					return ExpertsInfo;
-				})
+//				events.fireToPage('heAttentionPersons.html', 'heAttentionPersons', function() {
+//					return ExpertsInfo;
+//				})
+				events.openNewWindowWithData('AttentionPersons.html', {expertInfo:ExpertsInfo,type:0 });
 			})
 			events.addTap('IsFocusedMan', function() {
 				console.log('专家信息：' + JSON.stringify(ExpertsInfo))
-				events.openNewWindowWithData('AttentionPersons.html', ExpertsInfo);
+				events.openNewWindowWithData('AttentionPersons.html', {expertInfo:ExpertsInfo,type:1 });
 				console.log('关注他的人');
 			})
 			events.addTap('focusBtn', function() {
