--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -58,26 +58,26 @@
 			mui.plusReady(function() {
 				jQuery('#answerContent').prop("maxLength", "4000");
 				window.addEventListener('qiuzhi-addAnswer', function(event) {
-					CloudFileUtil.files=[];
+					CloudFileUtil.files = [];
 					type = 0;
 					askModel = event.detail.data;
 					document.getElementById('title').innerText = '我要回答';
-					[].forEach.call(document.querySelectorAll('.file-extras'),function(item) {
+					[].forEach.call(document.querySelectorAll('.file-extras'), function(item) {
 						item.style.display = 'inline-block';
 					})
-					document.getElementById('answerContent').placeholder="添加回答,最多4000字";
-					jQuery('#answerContent').prop("maxLength", "4000");//设置最长
+					document.getElementById('answerContent').placeholder = "添加回答,最多4000字";
+					jQuery('#answerContent').prop("maxLength", "4000"); //设置最长
 					var askTitle = document.getElementById("askTitle");
 					askTitle.innerHTML = askModel.AskTitle;
 				});
 				//加载评论
 				window.addEventListener('add-comment', function(e) {
-					CloudFileUtil.files=[];
+					CloudFileUtil.files = [];
 					type = 1;
 					document.getElementById('title').innerText = '我要评论';
-					document.getElementById('answerContent').placeholder="添加评论,最多1000字";
-					jQuery('#answerContent').prop("maxLength", "1000");//设置最长
-					[].forEach.call(document.querySelectorAll('.file-extras'),function(item) {
+					document.getElementById('answerContent').placeholder = "添加评论,最多1000字";
+					jQuery('#answerContent').prop("maxLength", "1000"); //设置最长
+					[].forEach.call(document.querySelectorAll('.file-extras'), function(item) {
 						item.style.display = 'none';
 					})
 					answerInfo = e.detail.data;
@@ -89,24 +89,24 @@
 				events.addTap('take_pic', function() {
 					if(CloudFileUtil.files.length < 9) {
 						camera.getPic(camera.getCamera(), function(picPath) {
-							plus.nativeUI.showWaiting(storageKeyName.UPLOADING,{
-								back:'none'
+							plus.nativeUI.showWaiting(storageKeyName.UPLOADING, {
+								back: 'none'
 							});
 							var saveSpace = storageKeyName.KNOWLEDGE; //保存空间
 							compress.compressPIC(picPath, function(event) {
 								var localPath = event.target;
-								var options={
-									type:1,
-									thumbSize:{
-										width:200,
-										height:200
+								var options = {
+									type: 10,
+									thumbSize: {
+										width: 200,
+										height: 200
 									},
-									cropSize:{
-										height:200
+									cropSize: {
+										height: 200
 									}
 								}
-								var data=CloudFileUtil.getSingleImgUploadOptions(localPath,7,0,saveSpace,options);
-//								var data = CloudFileUtil.getQNUpTokenWithManage(localPath, 7, 200, 0, );
+								var data = CloudFileUtil.getSingleImgUploadOptions(localPath, 7, 0, saveSpace, options);
+								//								var data = CloudFileUtil.getQNUpTokenWithManage(localPath, 7, 200, 0, );
 								CloudFileUtil.getQNUpTokenWithManage(storageKeyName.QNGETUPLOADTOKEN, data.options, function(datas) {
 									console.log("获取的数据：" + JSON.stringify(datas));
 									if(datas.Status == 1) {
@@ -118,10 +118,10 @@
 											var img = { //图片信息
 												url: tokenInfo.Domain + tokenInfo.Key,
 												thumb: tokenInfo.OtherKey[data.thumbKey],
-												clip:tokenInfo.OtherKey[data.clipKey],
+												clip: tokenInfo.OtherKey[data.clipKey],
 												type: 1
 											}
-											console.log("获取的图片信息："+JSON.stringify(img));
+											console.log("获取的图片信息：" + JSON.stringify(img));
 											//关闭等待框
 											plus.nativeUI.closeWaiting();
 											//放置图片
@@ -149,27 +149,27 @@
 					if(CloudFileUtil.files.length < 9) {
 						var picCount = 0; //上传图片计数
 						gallery.getMultiplePic(9 - CloudFileUtil.files.length, function(paths) { //回调函数
-							plus.nativeUI.showWaiting(storageKeyName.UPLOADING,{
-								back:'none'
+							plus.nativeUI.showWaiting(storageKeyName.UPLOADING, {
+								back: 'none'
 							}); //等待框
 							console.log("保存的路径：" + JSON.stringify(paths));
 							var saveSpace = storageKeyName.KNOWLEDGE; //保存路径
 							compress.compressPics(paths, function(compressedPaths) {
-								console.log('获取的图片路径：' + JSON.stringify(compressedPaths));
-								var options={//上传七牛后的处理参数
-									type:1,//处理类型 0：缩略图 1 裁剪 10 缩略图+裁剪
-									thumbSize:{
-										width:200,//缩略图最大宽度
-										height:200//缩略图最大高度
-									},
-									cropSize:{
-										height:200//裁剪宽度值
+									console.log('获取的图片路径：' + JSON.stringify(compressedPaths));
+									var options = { //上传七牛后的处理参数
+										type: 1, //处理类型 0：缩略图 1 裁剪 10 缩略图+裁剪
+										thumbSize: {
+											width: 200, //缩略图最大宽度
+											height: 200 //缩略图最大高度
+										},
+										cropSize: {
+											height: 200 //裁剪宽度值
+										}
 									}
-								}
-								//多图片处理获取参数
-								var data=CloudFileUtil.getMultipleImgUploadOptions(compressedPaths,7,0,saveSpace,options)
-//								var data = CloudFileUtil.getMultipleUploadDataOptions(compressedPaths, 7, 200, 0, saveSpace); //获取获取token的各参数
-								CloudFileUtil.getQNUpTokenWithManage(storageKeyName.QNGETUPLOADTOKEN, data.options, function(datas) {
+									//多图片处理获取参数
+									var data = CloudFileUtil.getMultipleImgUploadOptions(compressedPaths, 7, 0, saveSpace, options);
+									//								var data = CloudFileUtil.getMultipleUploadDataOptions(compressedPaths, 7, 200, 0, saveSpace); //获取获取token的各参数
+									CloudFileUtil.getQNUpTokenWithManage(storageKeyName.QNGETUPLOADTOKEN, data.options, function(datas) {
 										console.log("传回来的值：" + JSON.stringify(datas)) //回调数据
 										if(datas.Status == 1) { //成功
 											var tokenInfos = datas.Data; //参数信息
@@ -177,30 +177,27 @@
 											CloudFileUtil.uploadFiles(compressedPaths, tokenInfos, function(uploadData, status) {
 												console.log(JSON.stringify(uploadData));
 												var img = {
-													//原图地址
 													url: tokenInfos[0].Domain + JSON.parse(uploadData.responseText).key,
-													//缩略图地址
-													thumb: (tokenInfos[0].Domain + JSON.parse(uploadData.responseText).key).replace(saveSpace, saveSpace + "thumb/"),
-													clip:(tokenInfos[0].Domain + tokenInfos[0].Key.replace(saveSpace, saveSpace + "clip/"),//裁剪后的图片地址 第一张
+													thumb: tokenInfos[0].Domain + uploadData.responseText.key.replace(saveSpace, saveSpace + "thumb/"),
+													clip: tokenInfos[0].Domain + tokenInfos[0].Key.replace(saveSpace, saveSpace + "clip/"),
 													type: 1
-												}
+												};
 												picCount++;
 												//放置图片
 												CloudFileUtil.setPic(img); //放置图片
 												if(picCount == compressedPaths.length) { //所有图片已上传
-													plus.nativeUI.closeWaiting();  //关闭等待框
+													plus.nativeUI.closeWaiting(); //关闭等待框
 												}
-											});
-
+											})
 										}
-									},
-									//错误的回调
-									function(xhr, type, errorThrown) {
-										console.log("错误类型：" + type + errorThrown);
-										plus.nativeUI.closeWaiting();
-									});
-							});
-
+									})
+								},
+								//错误的回调
+								function(xhr, type, errorThrown) {
+									console.log("错误类型：" + type + errorThrown);
+									plus.nativeUI.closeWaiting();
+								});
+		
 						});
 					} else {
 						mui.toast('上传图片附件不得多于9张！');
