--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -14,6 +14,10 @@
 			.mui-table-view-cell {
 				padding: 0rem;
 			}
+			html,body,.mui-content{
+				min-height: 100%;
+				background-color: white;
+			}
 		</style>
 	</head>
 
@@ -25,7 +29,7 @@
 		</header>
 		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
-				<ul id="gride" class="mui-table-view mui-grid-view mui-grid-9">
+				<ul id="gride"  class="mui-table-view mui-grid-view mui-grid-9" style="background-color: transparent;">
 
 				</ul>
 				<button id="quit-group" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>
