--- a/JiaoBaoYun-hb/html/homework/workdetail-stu.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-stu.html
@@ -20,9 +20,11 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">作业详情</h1>
 		</header>
-		<div class="mui-content">
-			<div class="work-detail">
-
+		<!--下拉刷新容器-->
+		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
+		  <div class="mui-scroll">
+		    <!--数据列表-->
+		    <div class="work-detail">
 				<div class="homework-brief">
 					<span class="subject-icon"></span>
 					<div class="brief-words">
@@ -44,12 +46,17 @@
 					</div>
 				</div>
 			</div>
-			<div class="startWork-container">
+		  </div>
+		  <div class="startWork-container">
 				<p class='startWork-hint'>作业需要在线提交，点击完成</p>
 				<button id="btn-startWork" type="button" class="mui-btn btn-startAn">完成作业</button>
 			</div>
-
 		</div>
+		<!--<div class="mui-content">-->
+			
+			
+
+	<!--	</div>-->
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/mui.zoom.js "></script>
 		<script src="../../js/mui.previewimage.js"></script>
